--- a/source/stylesheets/article.css
+++ b/source/stylesheets/article.css
@@ -62,8 +62,12 @@
 	padding-top: 10px;
 }
 .reply_user_name a{
-	font-size: 12px;
+	font-size: 14px;
 	color: #838383;	
+}
+
+.reply_user_name a:hover {
+	color: #07695E; 
 }
 .article_head_info span:before {
 	content: "•";
@@ -76,7 +80,7 @@
 	content: "•";
 }
 .reply_date{ 
-	font-size: 12px;
+	font-size: 14px;
 	color: #838383;
 }
 .reply_content a{
@@ -98,7 +102,7 @@
 	color: #333;
 	line-height: 1.8em;
 	overflow: hidden;
-	font: 15px/1.5 "微软雅黑",Verdana,Geneva,sans-serif;
+	font: 15px/1.8 "微软雅黑",Verdana,Geneva,sans-serif;
 	border: 0 solid #ccc!important;
 	margin: 6px 0;
 	padding-bottom: 10px;
@@ -169,21 +173,21 @@
     color: #A4A4A4;
 }
 .nosignin a{
-	background-color: #00a090;
+	background-color: #569E97;
+	padding: 2px 6px; 
+	font-size: 15px;
 	color: #fff;
-	padding: 4px 12px;
-	border-radius: 3px;
-	font-size: 15px; 
-	color: #fff;  
 }
 .nosignin a:hover{
 	background-color: #039082;
 	color: #fff; 
 } 
 .opt a {
-	color: #5C5A5A
+	color: #999;
 }
-
+.opt a:hover{
+	color:#777777;
+}
 .reply_info .replyat:hover img {
 	border: 2px solid #D5C8DB
 }
@@ -192,7 +196,9 @@
 	display: block;
 	margin: 0 auto;
 }
-
+.detail_content p{
+	text-indent:2em;
+}
 #replywrap{
 	position:relative;
 }
