--- a/source/stylesheets/base.css
+++ b/source/stylesheets/base.css
@@ -2,7 +2,8 @@ body {
 	padding: 0;
 	margin: 0;
 	color: #504C4C;
-	background: url(../images/background2.png) repeat;
+	background-color: #fff;
+/* 	background: url(../images/background2.png) repeat; */
 	font: 14px "微软雅黑", Verdana, Geneva, sans-serif;
 }
 
