--- a/source/stylesheets/nav.css
+++ b/source/stylesheets/nav.css
@@ -3,7 +3,57 @@
 }
 
 .appwrap { 
+	transition: all 0.3s;
+	-moz-transition: all 0.3s; /* Firefox 4 */
+	-webkit-transition: all 0.3s; /* Safari 和 Chrome */
+	-o-transition: all 0.3s; /* Opera */
 	background-color: #00a090; 
+}
+.headon .appwrap{
+	background-color: #00a090; 
+	height: 35px;
+	min-height: 35px !important;
+}
+.catawrap li a{
+	font-size: 14px;
+	transition: all 0.3s;
+	-moz-transition: all 0.3s; /* Firefox 4 */
+	-webkit-transition: all 0.3s; /* Safari 和 Chrome */
+	-o-transition: all 0.3s; /* Opera */
+	background-color: transparent !important;
+}
+
+.logo{
+	transition: all 0.3s;
+	-moz-transition: all 0.3s; /* Firefox 4 */
+	-webkit-transition: all 0.3s; /* Safari 和 Chrome */
+	-o-transition: all 0.3s; /* Opera */
+	padding:10px 2px 10px 2px;
+}
+.headon .logo{
+	padding:0px 2px !important;
+}
+.headon .catawrap li a{
+	font-size: 14px;
+	background-color: transparent !important;
+	padding: 6px 15px;
+}
+.headon .headsearch .form-search {
+	font-size: 14px;
+	position: relative;
+	color:#fff;
+	margin-right: 10px;
+	margin-top: 0px !important;
+	transition: all 0.3s;
+	-moz-transition: all 0.3s; /* Firefox 4 */
+	-webkit-transition: all 0.3s; /* Safari 和 Chrome */
+	-o-transition: all 0.3s; /* Opera */
+}
+.headsearch .form-search {
+	font-size: 14px;
+	position: relative;
+	color:#fff;
+	margin-right: 10px;
 }
 .container{
 	width:70% !important;
@@ -15,8 +65,7 @@
 }
 .catawrap a{
 	color:#fff !important;
-}
- 
+} 
 
 .navul {
 	margin-top: 0;
@@ -49,7 +98,7 @@
 }
 .catawrap li a{
 	font-size: 14px;
-	background:#00a090 !important;
+	background-color: transparent !important;
 }
 .active a { 
 	border-bottom: 3px solid #FFFFFF; 
@@ -168,18 +217,43 @@
 	font-size: 14px;
 	margin-right: 10px; 
 	line-height: 55px;
-	float: right;
+	float: right;	
+	transition: all 0.3s;
+	-moz-transition: all 0.3s; /* Firefox 4 */
+	-webkit-transition: all 0.3s; /* Safari 和 Chrome */
+	-o-transition: all 0.3s; /* Opera */
 }
-
+.headon	.optionaccess{
+	display: block;
+	color:#fff !important;
+	font-size: 14px;
+	margin-right: 10px; 
+	line-height: 35px;
+	float: right;
+	padding-top: 0px;
+}
+}
 .reg_login .dropdown-toggle {
 	display: block; 
 	float: right;
 	color: #fff !important;
 	background-color: #00a090 !important; 
 	padding-top: 17px;
-	padding-bottom: 15px;
+	padding-bottom: 15px;	
+	transition: all 0.3s;
+	-moz-transition: all 0.3s; /* Firefox 4 */
+	-webkit-transition: all 0.3s; /* Safari 和 Chrome */
+	-o-transition: all 0.3s; /* Opera */
 }
-
+.headon .reg_login .dropdown-toggle {
+	display: block; 
+	float: right;
+	color: #fff !important;
+	background-color: #00a090 !important; 
+	line-height: 20px;
+	padding-top: 8px;
+	padding-bottom: 0px;
+}
 .reg_login li {
 	list-style: none;
 }
