--- a/source/stylesheets/pagesty.css
+++ b/source/stylesheets/pagesty.css
@@ -66,8 +66,12 @@
 	padding-top: 10px;
 }
 .reply_user_name a{
-	font-size: 12px;
+	font-size: 14px;
 	color: #838383;	
+}
+
+.reply_user_name a:hover {
+	color: #07695E; 
 }
 .article_head_info span:before {
 	content: "•";
@@ -80,7 +84,7 @@
 	content: "•";
 }
 .reply_date{ 
-	font-size: 12px;
+	font-size: 14px;
 	color: #838383;
 }
 .reply_content a{
@@ -102,7 +106,7 @@
 	color: #333;
 	line-height: 1.8em;
 	overflow: hidden;
-	font: 15px/1.5 "微软雅黑",Verdana,Geneva,sans-serif;
+	font: 15px/1.8 "微软雅黑",Verdana,Geneva,sans-serif;
 	border: 0 solid #ccc!important;
 	margin: 6px 0;
 	padding-bottom: 10px;
@@ -173,21 +177,21 @@
     color: #A4A4A4;
 }
 .nosignin a{
-	background-color: #00a090;
+	background-color: #569E97;
+	padding: 2px 6px; 
+	font-size: 15px;
 	color: #fff;
-	padding: 4px 12px;
-	border-radius: 3px;
-	font-size: 15px; 
-	color: #fff;  
 }
 .nosignin a:hover{
 	background-color: #039082;
 	color: #fff; 
 } 
 .opt a {
-	color: #5C5A5A
+	color: #999;
 }
-
+.opt a:hover{
+	color:#777777;
+}
 .reply_info .replyat:hover img {
 	border: 2px solid #D5C8DB
 }
@@ -196,7 +200,9 @@
 	display: block;
 	margin: 0 auto;
 }
-
+.detail_content p{
+	text-indent:2em;
+}
 #replywrap{
 	position:relative;
 }
@@ -295,6 +301,7 @@
 	background-color: #FFF;
 	margin-top: 1px;
 	border-radius: 5px;
+	border-bottom: 1px solid #f0f0f0
 }
 .articleitem-first {
 	padding: 10px 20px;
@@ -335,12 +342,25 @@
 	color: #333;
 	line-height: 1.8em;
 	overflow: hidden;
-	font:14px/1.5 "微软雅黑", Verdana, Geneva, sans-serif;
+	font:14px/1.7 "微软雅黑", Verdana, Geneva, sans-serif;
 	border: 0 solid #ccc!important;
 	margin: 6px 0px 6px 0px;
 	border-radius: 0;
 }
-
+.article_title{	
+	color: #07695F;
+	font-size: 18px;
+	text-decoration: none;
+}
+.article_msg_content{	
+	color: rgba(0,0,0,0.5);
+	line-height: 1.8em;
+	overflow: hidden;
+	font:16px/1.5 "微软雅黑", Verdana, Geneva, sans-serif;
+	border: 0 solid #ccc!important;
+	margin: 6px 0px 6px 0px;
+	border-radius: 0;
+}
 .shuo_sty {
 	font-size: 14px;
 	color: #777;
@@ -371,20 +391,58 @@
 	height: 20px;
 }
 .otherinfowrap {
+	position: relative;
 	font-size: 14px;
 	color: #777;
 	margin-top: 12px;
+	height: 35px;
+	padding: 8px 0px;
 }
-.articledate{
-	display: inline-block;
+.articledate{ 
 	float: left;
+	color: #ababab;
 }
+
+.articletag{	 
+	float: left;
+	margin-left: 15px;
+	color: #ababab;
+}  
+.articletag a{	 
+	font-size: 14px;
+	color: #ababab;
+} 
+.articletag a:hover{	 
+	color: #07695E;
+} 
+.author-wrap{
+	display: inline-block;
+	position: absolute;
+	color: #ababab;
+	left: 50%;
+}
+.author-wrap a{	
+	color: #ababab;
+}
+.author-wrap a:hover{	 
+	color: #07695E;
+} 
 .articlelabel{
 	display: inline-block;
 	float: left;
 	margin-left: 15px;
 }
+.taglist{
+	display:inline-block;
+}
+.tag-item{
+	list-style: none;
+	float:left;
+}
 
+.tag-item a:hover{
+	opacity: 0.8;
+}
 .label-item a {
 	display: inline-block;
 	text-decoration: none;
@@ -465,8 +523,7 @@
 }
 .operwrap{
 	float: right;
-	opacity: 0.5;
-	border-bottom: 1px dashed #878787;
+	opacity: 0.5; 
 }
 .biaotai {
 	float: right;
@@ -476,7 +533,7 @@
 .operwrap a {
 	color: #777;
 	display: inline-block; 
-	padding: 2px 5px 2px 5px; 
+	padding: 0px 5px; 
 }
 .operwrap i{
 	margin-left: 5px;
@@ -604,6 +661,7 @@
 	height: 20px;
 	float: right;
 	width: 20px;
+	margin-top: 5px;
 	color: #FFF;
 	line-height: 20px;
 	font-size: 15px;
@@ -622,7 +680,7 @@
 	background-color: #eee;	
 }
 .thumb{
-	margin-right: 5px;
+	margin-right: 15px;
 	float: left;
 	border:2px solid #fff;
 	-webkit-transition: all .35s ease-in-out;
@@ -663,10 +721,14 @@
 	margin-left: 10px;
 	font-size: 13px;
 }
-.item_title a{
+.articletype{
 	color: #333;
 }
-.item_title a:hover{  
+.urltype{
+	color:rgba(0,0,0,.5);
+	font:16px/1.5 "微软雅黑",Verdana,Geneva,sans-serif;
+}
+.articletype:hover,.urltype:hover{  
 	color: #07695E;
 	text-decoration: underline;
 }
@@ -828,7 +890,57 @@
 }
 
 .appwrap { 
+	transition: all 0.3s;
+	-moz-transition: all 0.3s; /* Firefox 4 */
+	-webkit-transition: all 0.3s; /* Safari 和 Chrome */
+	-o-transition: all 0.3s; /* Opera */
 	background-color: #00a090; 
+}
+.headon .appwrap{
+	background-color: #00a090; 
+	height: 35px;
+	min-height: 35px !important;
+}
+.catawrap li a{
+	font-size: 14px;
+	transition: all 0.3s;
+	-moz-transition: all 0.3s; /* Firefox 4 */
+	-webkit-transition: all 0.3s; /* Safari 和 Chrome */
+	-o-transition: all 0.3s; /* Opera */
+	background-color: transparent !important;
+}
+
+.logo{
+	transition: all 0.3s;
+	-moz-transition: all 0.3s; /* Firefox 4 */
+	-webkit-transition: all 0.3s; /* Safari 和 Chrome */
+	-o-transition: all 0.3s; /* Opera */
+	padding:10px 2px 10px 2px;
+}
+.headon .logo{
+	padding:0px 2px !important;
+}
+.headon .catawrap li a{
+	font-size: 14px;
+	background-color: transparent !important;
+	padding: 6px 15px;
+}
+.headon .headsearch .form-search {
+	font-size: 14px;
+	position: relative;
+	color:#fff;
+	margin-right: 10px;
+	margin-top: 0px !important;
+	transition: all 0.3s;
+	-moz-transition: all 0.3s; /* Firefox 4 */
+	-webkit-transition: all 0.3s; /* Safari 和 Chrome */
+	-o-transition: all 0.3s; /* Opera */
+}
+.headsearch .form-search {
+	font-size: 14px;
+	position: relative;
+	color:#fff;
+	margin-right: 10px;
 }
 .container{
 	width:70% !important;
@@ -840,8 +952,7 @@
 }
 .catawrap a{
 	color:#fff !important;
-}
- 
+} 
 
 .navul {
 	margin-top: 0;
@@ -874,7 +985,7 @@
 }
 .catawrap li a{
 	font-size: 14px;
-	background:#00a090 !important;
+	background-color: transparent !important;
 }
 .active a { 
 	border-bottom: 3px solid #FFFFFF; 
@@ -993,18 +1104,43 @@
 	font-size: 14px;
 	margin-right: 10px; 
 	line-height: 55px;
-	float: right;
+	float: right;	
+	transition: all 0.3s;
+	-moz-transition: all 0.3s; /* Firefox 4 */
+	-webkit-transition: all 0.3s; /* Safari 和 Chrome */
+	-o-transition: all 0.3s; /* Opera */
 }
-
+.headon	.optionaccess{
+	display: block;
+	color:#fff !important;
+	font-size: 14px;
+	margin-right: 10px; 
+	line-height: 35px;
+	float: right;
+	padding-top: 0px;
+}
+}
 .reg_login .dropdown-toggle {
 	display: block; 
 	float: right;
 	color: #fff !important;
 	background-color: #00a090 !important; 
 	padding-top: 17px;
-	padding-bottom: 15px;
+	padding-bottom: 15px;	
+	transition: all 0.3s;
+	-moz-transition: all 0.3s; /* Firefox 4 */
+	-webkit-transition: all 0.3s; /* Safari 和 Chrome */
+	-o-transition: all 0.3s; /* Opera */
 }
-
+.headon .reg_login .dropdown-toggle {
+	display: block; 
+	float: right;
+	color: #fff !important;
+	background-color: #00a090 !important; 
+	line-height: 20px;
+	padding-top: 8px;
+	padding-bottom: 0px;
+}
 .reg_login li {
 	list-style: none;
 }
@@ -1142,8 +1278,7 @@
 	padding: 30px 10px 10px 30px;	
 }
 .follower a:hover{ 
-	color: #07695E;
-	text-decoration: underline;
+	color: #07695E; 
 }
 }
 .follower p {
