--- a/views/pubarticle.ejs
+++ b/views/pubarticle.ejs
@@ -3,6 +3,9 @@
 <body>	
 	<% include partial/nav %>
 	<div class="mainwrap"> 
+    <div class="rightwrap"> 
+      <% include partial/pubsidebar %>
+    </div>
 		<div class="leftwrap">
 			<div class="writepanel">
         <ul class="share_model">
@@ -28,14 +31,7 @@
                 <span>标题不少于5个字</span>
               </div>
             </div>
-  					<textarea type="text" class="writebox textarea" name="articlestr" id="post_body" placeholder="写点什么呢?"></textarea>
-           <!-- <div class="labelwrap">
-              <a href="#" id="add_label">添加标签</a>
-              <div id="label_input" style="display:none;">
-                <input  class="form-control " id="label" name="label" placeholder="">
-                <span>标签为2~4个字，多标签请用空格隔开</span>
-              </div>
-            </div> -->
+  					<textarea type="text" class="writebox textarea" name="mcontent" id="postcontent" placeholder="写点什么呢?"></textarea> 
   					<div class="subarticle_wrap"><button type="submit" class="btn btn-success" id="subarticle">发布</button></div>
   				</form>
         </div>
@@ -71,7 +67,7 @@
           <a id="choose-btn-id" class="choose-btn">选择文件</a>
           <input id="choose" name="picture" type="file" class="b-button__input">
         </div>
-        <h3 class="submitinfo" id="submitinfo"></h3>
+        <h4 class="submitinfo" id="submitinfo"></h4>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button> 
@@ -89,7 +85,12 @@
         <h4 class="modal-title" id="myModalLabel">插入超链接</h4>
       </div>
       <div class="modal-body"> 
-                  <input  class="form-control " id="link" name="link" >  
+          <div class="form-group">
+                  <input  class="form-control " id="linkname" name="linkname" placeholder="链接">  
+          </div>
+          <div class="form-group">
+                  <input  class="form-control " id="link" name="link" value="http://">  
+          </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button> 
@@ -99,56 +100,9 @@
   </div>
 </div>
 
- <script type="text/javascript">
-    var editor=$("#post_body").qeditor({}); 
-
-    var submitinfo = $(".submitinfo");
-    var insertbtn = $("#savepic");
-    $("#choose").wrap("<form id='uploadpic' action='/picupload' method='post' enctype='multipart/form-data'></form>");
-      $("#choose").change(function(){  
-      $("#uploadpic").ajaxSubmit({
-        dataType:  'json',
-        beforeSend: function() {
-              submitinfo.text("正在上传...");
-              insertbtn.hide();
-          }, 
-        success: function(msg) {
-          if(msg.type == 0){          
-                submitinfo.text(msg.content);
-          }else{            
-                submitinfo.text(msg.content);       
-               insertbtn.show();
-          }
-        },
-        error:function(){       
-          insertbtn.hide();
-        }
-      });
-    }); 
-
-    $("#savepic").click(function(){   
-      var imagemodal = $("#imagemodal");
-      var submitinfo = $(".submitinfo").text(); 
-      if(submitinfo !== '正在上传...'){  
-        QEditor.action(editor,'InsertImage',submitinfo); 
-        imagemodal.modal('hide');
-      }
-    });
-
-    $("#link").change(function(){ 
-      if($("#link").val().length >0 ){
-        $("#insertlinkbtn").show();
-      }else{        
-        $("#insertlinkbtn").hide();
-      }
-    });
-
-    $("#insertlinkbtn").click(function(){   
-      var linkmodal = $("#linkmodal");
-      var linkinfo = $("#link").val();  
-      QEditor.action(editor,'CreateLink',linkinfo); 
-      linkmodal.modal('hide'); 
-    });
-    </script>
+<script type="text/javascript">
+  var editor =  new Editor();
+  editor.render(document.getElementById('postcontent'));
+</script>
 
 	<% include partial/footer %>
