--- a/source/stylesheets/article.css
+++ b/source/stylesheets/article.css
@@ -108,6 +108,15 @@
 	padding-bottom: 10px;
 	border-radius: 0;
 }
+.msg_content_detail pre{
+	font-size: 14px;
+	border-radius: 0;
+	padding: 0 15px;
+	border: 0; 
+	border-width: 1px 0;
+	background: #f7f7f7;
+	font-family: Monaco,Menlo,Consolas,"Courier New",monospace;
+}
 .share {
 	text-align: center;
 	position: relative;
@@ -195,16 +204,14 @@
 	width: 80%;
 	display: block;
 	margin: 0 auto;
-}
-.detail_content p{
-	text-indent:2em;
-}
+} 
 #replywrap{
 	position:relative;
 }
 #reply_input,.atreply{
 	width: 100%;
 	height: 30px;
+	resize: vertical;
 	border-radius: 4px;
 	padding: 4px 40px 4px 4px;
 }
