--- a/source/stylesheets/base.css
+++ b/source/stylesheets/base.css
@@ -19,13 +19,8 @@ input:focus,textarea:focus{
 }
 
 textarea ,input{
-	border-radius: 4px;
-	resize: none;
-	-webkit-transition: all linear 0.2s; 
-	-moz-transition: all linear 0.2s; 
-	-ms-transition: all linear 0.2s;
-	-o-transition: all linear 0.2s;
-	transition: all linear 0.2s;
+	border-radius: 4px; 
+	overflow:hidden;
 	-webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);
 	-moz-box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);
 	box-shadow: inset 0 1px 3px rgba(0,0,0,0.1);
@@ -59,6 +54,7 @@ ul{
 	width: 240px;
 	padding: 0 15px 10px;
 	background-color: #fff;
+	border-left: 1px solid #f0f0f0;
 } 
 .leftwrap {
 	  margin-right: 245px;
