--- a/views/login.ejs
+++ b/views/login.ejs
@@ -44,7 +44,7 @@
 									>> 还没注册，<a href="/reg">马上注册</a><br>
 								</li>
 								<li>
-									>> 忘记密码了?<a href="/forgetpwd">找回密码</a>
+									>> 忘记密码了?<a href="/sendmail">找回密码</a>
 								</li>
 							</ul>
 						</div>
