--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -1,70 +1,88 @@
- 		<footer class="copyright">
- 			<div id="gotopbtn">
- 				<img border="0" src="/images/scrollup.png" style="height: 35px;width: 35px;">
- 			</div>  
-			<script>
-			(function(){
-				var settings = {
-						trigger:'hover',
-						title:'38锶',
-						content:'<p>This is webui popover demo.</p><p>just enjoy it and have fun !</p>',
-						width:250,						
-						multi:true,						
-						closeable:true,
-						style:'',
-						padding:false
-				};				 
- 
-				function initPopover(){		  		 
-					var
-					 	asyncSettings = {	width:'auto',
-					 						height:'auto',
-					 						closeable:true,
-					 						padding:false,
-					 						cache:false,
-					 						url:'/userinfo/',
-					 						type:'async',   
-					 						content:function(data){
-					 							title = "ccc";
-					 							var html = '<ul class="list-group">'; 
-				 								html+='<li class="list-group-item">昵称:'+ data.name +'</li>';
-				 								html+='<li class="list-group-item">加入:'+ data.cometime +'</li>';	
-				 								html+='<li class="list-group-item">心情数:'+ data.articlenum +'</li>';	 	 
-												html+='</ul>';
-												return html;
-					 						}};
-					$('a.show-pop-async').webuiPopover('destroy').webuiPopover($.extend({},settings,asyncSettings));
-
-					$('a.show-pop-event').each(function(i,item){
-							var ename = $(item).text()+'.webui.popover';
-							$(item).webuiPopover('destroy').webuiPopover(settings)
-							.on(ename,function(e){
-								var log =  ename+' is trigged!';
-								if (console){
-									console.log(log);
-								}
-								$('#eventLogs').text($('#eventLogs').text()+'\n'+log);
-							});
-					});
-
-
-				}
-				initPopover();
-				
-			})();
-			
-		</script>
- 
-			<div>
-				<a href="https://www.upyun.com/"><img src="https://upfiles.b0.upaiyun.com/logo/90x45.png" alt="UPYUN"></a>
-				<span class="otherlink">版权所有 © 2014 38SR.COM</span>
-				<a target="_blank" href="https://github.com/ForestCho/nodejs-38sr" class="otherlink">源码</a>  
-				<a href="/about" class="otherlink">关于</a>  
-				<a href="/shijian" class="otherlink">成长线</a>  
-				<a href="/feedback" class="otherlink">反馈</a>   
-				<a target="_blank" href="http://weibo.com/forestcho?from=profile&wvr=5&loc=infdomain" class="otherlink">微博</a> 
-		 		<script src="https://s95.cnzz.com/stat.php?id=1253083255&web_id=1253083255" language="JavaScript" ></script>
-			</div> 
-		</footer>
-	</body>
-	</html>
+<footer class="copyright">
+	
+	<!-- Modal -->
+	<div class="modal fade" id="regmodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal_regwrap">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+					<h4 class="modal-title" id="myModalLabel">一分钟注册</h4>
+				</div>
+				<div class="modal-body">
+					<div class="form-group">
+						<div class="wrap_col_sm">
+							<input  class="form-control emailbg" id="regemail" name="regemail" placeholder="email">
+						</div>
+					</div>
+					<div id="noticemsg"></div>
+				</div>
+				<div class="modal-footer">					
+					<div class="switch-back">
+						已有帐号？<a id="gotologin">登录到38SR»</a>
+					</div>
+					<button type="submit" class="btn btn-success" id="subemail">注册</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Modal -->
+	<div class="modal fade" id="loginmodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal_regwrap">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+					<h4 class="modal-title" id="myModalLabel">快速登录</h4>
+				</div>
+				<form class="form-horizontal" id="loginform" role="form" action="/login" method="POST">
+					<div class="modal-body">
+						<div class="form-group">
+							<div class="wrap_col_sm">
+								<input  class="form-control accountbg" id="uname" name="uname" placeholder="帐号">
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="wrap_col_sm">
+								<input type="password" class="form-control pwdbg" id="pwd" name="pwd" placeholder="密码">
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="wrap_col_sm">
+								<div class="checkbox">
+									<label>
+										<input type="checkbox" name="remember"> 记住密码
+									</label>
+								</div>
+							</div>
+						</div>
+						<div id="noticemsg1"></div>
+					</div>
+					<div class="modal-footer">
+						<div class="switch-back">
+							还没有帐号？<a id="gotoreg">点击注册»</a>
+						</div>
+						<div class="switch-back2">
+							<a id="gotoreg" href="/sendmail">忘记密码»</a>
+						</div>
+						<input type="hidden" id="prelink" name="prelink" value="<%= typeof(curpath) == 'undefined'?"":curpath %>">
+						<button type="submit" class="btn btn-success" id="sublogin">登录</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+	<div id="gotopbtn">
+		<img border="0" src="/images/scrollup.png" style="height: 35px;width: 35px;">
+	</div>
+	
+	<div>
+		<a href="https://www.upyun.com/"><img src="https://upfiles.b0.upaiyun.com/logo/90x45.png" alt="UPYUN"></a>
+		<span>版权所有 © 2014 38SR.COM</span>
+		<a target="_blank" href="https://github.com/ForestCho/nodejs-38sr" class="otherlink">源码</a>
+		<a href="/about" class="otherlink">关于</a>
+		<a href="/shijian" class="otherlink">成长线</a>
+		<a href="/feedback" class="otherlink">反馈</a>
+		<a target="_blank" href="http://weibo.com/forestcho?from=profile&wvr=5&loc=infdomain" class="otherlink">微博</a>
+	</div>
+</footer>
+</body>
+</html>
