--- a/views/partial/indexsidebar.ejs
+++ b/views/partial/indexsidebar.ejs
@@ -1,33 +1,8 @@
-<% if(!locals.userinfo){%>
-<div class="loginwrap">
-	<form class="form-horizontal" role="form" action="/login" method="POST">
-		<div class="form-group">
-			<input  class="form-control accountbg" id="uname" name="uname" placeholder="用户名">
-		</div>
-		<div class="form-group">
-			<input type="password" class="form-control pwdbg" id="pwd" name="pwd" placeholder="密码">
-		</div>
-		<div>
-			<div class="form-group" style="float:left">
-				<div class="checkbox">
-					<label>
-						<input type="checkbox" name="remember">记住登录
-					</label>
-				</div>
-			</div>
-			<div class="form-group" style="float:right">
-				<input type="hidden" id="prelink" name="prelink" value="<%=curpath %>">
-				<button type="submit" class="btn btn-default" style="padding: 6px 36px;">登录</button>
-			</div>
-		</div>
-	</form>
-	<div style="clear:both"></div>
-</div>
-<% }else{%>
 <div class="site_intro">
 	<div class="sidetitle"><span class="titletext">38锶</span></div>
 	<p>做一名简单的锶者</p>
 </div>
+<% if(locals.userinfo){%>
 <div class="pubone">
 	<a href="/pub" class>发布一个</a>
 </div>
@@ -50,20 +25,20 @@
 		<%
 		var hotuser = d.hotuser;
 		for(i=0;i<hotuser.length;i++){%>
-		<a href="/user/<%=hotuser[i].name%>" alt="<%=hotuser[i].name%>" class="userview fansuserlink"> 
-				<div href="/user/<%=hotuser[i].name%>" alt="<%=hotuser[i].name%>" class="imagewrap"><img src=<%= hotuser[i].photo %>></div>
-				<div class="namewrap"><%=hotuser[i].name%></div> 
-				<div 
-					<% if(i==0){%>
-						class="ordernum firstorder"
-					<% }else if(i==1){%>
-						class="ordernum secondorder"	
-					<%}else if(i==2){%>
-						class="ordernum thirdorder"				
-					<%}else{%>
-						class="ordernum otherorder" 
-					<%}%>
-				><%= i+1 %></div> 
+		<a href="/user/<%=hotuser[i].name%>" alt="<%=hotuser[i].name%>" class="userview fansuserlink">
+			<div href="/user/<%=hotuser[i].name%>" alt="<%=hotuser[i].name%>" class="imagewrap"><img src=<%= hotuser[i].photo %>></div>
+			<div class="namewrap"><%=hotuser[i].name%></div>
+			<div
+				<% if(i==0){%>
+				class="ordernum firstorder"
+				<% }else if(i==1){%>
+				class="ordernum secondorder"
+				<%}else if(i==2){%>
+				class="ordernum thirdorder"
+				<%}else{%>
+				class="ordernum otherorder"
+				<%}%>
+			><%= i+1 %></div>
 		</a>
 		<%}%>
 		<div style="clear:both"></div>
