--- a/source/stylesheets/topset.css
+++ b/source/stylesheets/topset.css
@@ -2,9 +2,11 @@
 	position: fixed;
 	text-align: center;
 	line-height: 30px;
+	background-color: rgba(0, 160, 144, 0.3);
 	bottom: 0px;
-	width: 35px;
-	height: 35px;
+	width: 40px;
+	height: 40px;
+	padding: 5px;
 	margin-right: 120px;
 	font-size: 12px;
 	cursor: pointer;
@@ -15,7 +17,15 @@
 	-o-transition: all linear .2s;
 	transition: all linear .2s;
 }
-
+#gotopbtn:hover{
+	background-color: rgba(0, 160, 144, 0.8);
+}
+#gotopbtn  span{	
+    width: 30px;
+    height: 30px;
+    font-size: 30px;
+    color: #fff;
+}
 .yjfk {
 	position: fixed;
 	top: 150px;
