--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -71,7 +71,7 @@
 		</div>
 	</div>
 	<div id="gotopbtn">
-		<img border="0" src="/images/scrollup.png" style="height: 35px;width: 35px;">
+		<span class="fa fa-arrow-up"></span>
 	</div>
 	
 	<div>
